third_party/move/tools/move-decompiler/tests/compiler-v2-test/loop_result_type.exp
module 0x2::X {
    struct R {
    }
}
module 0x2::M {
    use 0x2::X;
    fun foo(_x: u64) {
        ()
    }
    fun t0(): X::R {
        loop continue
    }
    fun t1(): u64 {
        loop continue
    }
    fun t2() {
        loop continue
    }
    fun t3(): X::R {
        loop continue
    }
    fun t4() {
        loop continue
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: cannot return nothing from a function with result type `X::R`
   ┌─ loop_result_type.move:11:9
   │
11 │         loop continue
   │         ^^^^^^^^^^^^^

error: cannot return nothing from a function with result type `u64`
   ┌─ loop_result_type.move:14:9
   │
14 │         loop continue
   │         ^^^^^^^^^^^^^

error: cannot return nothing from a function with result type `X::R`
   ┌─ loop_result_type.move:20:9
   │
20 │         loop continue
   │         ^^^^^^^^^^^^^
